--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+    <h1>Header 1</h1>
     <div>
       {{ content }}
     </div>
