--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <div style="background-color:grey;" class="container-lg px-3 my-5 markdown-body">
+    <div style="background-color:#eaf7ff;" class="container-lg px-3 my-5 markdown-body">
 
       {{ content }}
 
