--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,8 +8,8 @@
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   </head>
-  <body>
-    <div style="background-color:#eaf7ff;" class="container-lg px-3 my-5 markdown-body">
+  <body style="background-color:#eaf7ff;" >
+    <div class="container-lg px-3 my-5 markdown-body">
 
       {{ content }}
 
